--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "scripts": {
   
     
-  "start": "node app.js",
+  "start": "node dist/app.js",
   
     
-  "dev": "nodemon app.js"
+  "dev": "nodemon --exec ts-node src/app.ts",
+  
+    
+  "build": "tsc",
+  
+    
+  "lint": "eslint"
   
   },
   
@@ -53,6 +59,9 @@
   
     
   "globals": "^16.5.0",
+  
+    
+  "jiti": "^2.6.1",
   
     
   "nodemon": "^3.1.11",
