--- a/package.json
+++ b/package.json
@@ -1,79 +1,34 @@
 {
-  
   "name": "subscriptiontracker",
-  
   "version": "0.0.0",
-  
   "private": true,
-  
   "type": "module",
-  
   "scripts": {
-  
-    
-  "start": "node dist/app.js",
-  
-    
-  "dev": "nodemon --exec ts-node src/app.ts",
-  
-    
-  "build": "tsc",
-  
-    
-  "lint": "eslint"
-  
+    "start": "node dist/app.js",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "build": "tsc",
+    "lint": "eslint"
   },
-  
   "dependencies": {
-  
-    
-  "cookie-parser": "~1.4.4",
-  
-    
-  "debug": "~2.6.9",
-  
-    
-  "dotenv": "^17.2.3",
-  
-    
-  "express": "~4.16.1",
-  
-    
-  "morgan": "~1.9.1"
-  
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^17.2.3",
+    "express": "~4.16.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
+    "morgan": "~1.9.1"
   },
-  
   "devDependencies": {
-  
-    
-  "@eslint/js": "^9.39.1",
-  
-    
-  "@types/express": "^5.0.5",
-  
-    
-  "@types/node": "^24.10.1",
-  
-    
-  "eslint": "^9.39.1",
-  
-    
-  "globals": "^16.5.0",
-  
-    
-  "jiti": "^2.6.1",
-  
-    
-  "nodemon": "^3.1.11",
-  
-    
-  "ts-node": "^10.9.2",
-  
-    
-  "typescript": "^5.9.3",
-  
-    
-  "typescript-eslint": "^8.47.0"
-  
+    "@eslint/js": "^9.39.1",
+    "@types/express": "^5.0.5",
+    "@types/node": "^24.10.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
+    "nodemon": "^3.1.11",
+    "prettier": "3.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0"
   }
 }
