--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,6 @@
     "allowImportingTsExtensions": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
